--- a/package.json
+++ b/package.json
@@ -18,6 +18,17 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@faker-js/faker": "^9.0.1",
+    "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-dragdata": "^2.0.0",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -26,7 +37,9 @@
     "@angular-devkit/build-angular": "^17.3.9",
     "@angular/cli": "^17.3.9",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/chart.js": "^2.9.32",
     "@types/jasmine": "~5.1.0",
+    "@types/moment": "^2.13.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
